--- a/index.html
+++ b/index.html
@@ -3,32 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Загрузка на сервер</title>
+    <title>Загрузка сервера</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
-
         html, body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, rgb(11, 11, 11) 0%, rgb(25, 25, 25) 100%);
+            background: rgb(11, 11, 11);
             overflow: hidden;
             height: 100vh;
             color: white;
             position: relative;
         }
-
-        .background-animated {
+        .bg-gradient {
             position: fixed;
             width: 100%;
             height: 100%;
-            background: radial-gradient(ellipse at center, rgba(35, 35, 35, 0.5) 0%, transparent 70%);
+            background: radial-gradient(ellipse at center, rgba(35, 35, 35, 0.6) 0%, rgb(11, 11, 11) 70%);
             animation: bgPulse 8s ease-in-out infinite;
         }
-
-        .container {
+        .main-container {
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -37,40 +34,19 @@
             position: relative;
             z-index: 10;
         }
-
-        .logo-section {
+        .logo-box {
             margin-bottom: 60px;
-            animation: slideDown 1s ease-out;
+            animation: slideDown 1.2s ease-out;
         }
-
-        .logo-frame {
+        .logo-border {
             position: relative;
             padding: 50px;
             background: rgba(35, 35, 35, 0.5);
             border-radius: 30px;
-            box-shadow: 
-                0 15px 50px rgba(0, 0, 0, 0.5),
-                inset 0 1px 0 rgba(255, 255, 255, 0.1);
+            box-shadow: 0 15px 50px rgba(0, 0, 0, 0.6);
             border: 1px solid rgba(255, 255, 255, 0.1);
             animation: logoFloat 5s ease-in-out infinite;
         }
-
-        .logo-frame::before {
-            content: '';
-            position: absolute;
-            top: -2px;
-            left: -2px;
-            right: -2px;
-            bottom: -2px;
-            background: linear-gradient(45deg, 
-                rgba(255, 255, 255, 0.1), 
-                transparent, 
-                rgba(255, 255, 255, 0.1));
-            border-radius: 30px;
-            z-index: -1;
-            animation: borderRotate 4s linear infinite;
-        }
-
         .server-logo {
             max-width: 550px;
             width: 100%;
@@ -78,104 +54,75 @@
             display: block;
             filter: drop-shadow(0 5px 20px rgba(255, 255, 255, 0.2));
         }
-
-        .welcome-text {
-            font-size: 42px;
+        .title-text {
+            font-size: 44px;
             font-weight: 700;
             margin-bottom: 20px;
             text-align: center;
-            background: linear-gradient(90deg, #fff, #ddd, #fff);
-            background-size: 200% auto;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            animation: textShine 3s linear infinite;
             letter-spacing: 4px;
+            text-shadow: 0 3px 20px rgba(255, 255, 255, 0.3);
         }
-
-        .server-name {
-            font-size: 24px;
+        .subtitle {
+            font-size: 22px;
             margin-bottom: 50px;
-            opacity: 0.8;
+            opacity: 0.85;
             letter-spacing: 2px;
             text-align: center;
         }
-
-        .progress-section {
-            width: 700px;
-            max-width: 90%;
-        }
-
-        .progress-info {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 15px;
-            font-size: 16px;
-            opacity: 0.9;
-        }
-
-        .progress-bar-wrapper {
-            width: 100%;
-            height: 8px;
-            background: rgba(35, 35, 35, 0.8);
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.5);
-            margin-bottom: 30px;
-            position: relative;
-        }
-
-        .progress-bar-wrapper::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(255, 255, 255, 0.05);
-            border-radius: 10px;
-        }
-
-        .progress-bar {
-            height: 100%;
-            background: linear-gradient(90deg, 
-                rgba(255, 255, 255, 0.7), 
-                rgba(255, 255, 255, 1),
-                rgba(255, 255, 255, 0.7));
-            border-radius: 10px;
-            width: 0%;
-            transition: width 0.4s ease;
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
-            position: relative;
-        }
-
-        .status-text {
-            text-align: center;
-            font-size: 20px;
-            margin-top: 25px;
-            opacity: 0.85;
-            letter-spacing: 1.5px;
-            font-weight: 400;
-        }
-
-        .loading-spinner {
+        .spinner-circle {
             width: 80px;
             height: 80px;
             border: 3px solid rgba(255, 255, 255, 0.1);
             border-top: 3px solid white;
             border-radius: 50%;
             margin: 30px auto;
-            animation: spinLoader 1s linear infinite;
+            animation: spinRotate 1.2s linear infinite;
         }
-
-        .file-info {
+        .progress-wrapper {
+            width: 700px;
+            max-width: 90%;
+            margin-top: 40px;
+        }
+        .progress-labels {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 12px;
+            font-size: 16px;
+            opacity: 0.9;
+        }
+        .progress-container {
+            width: 100%;
+            height: 8px;
+            background: rgba(35, 35, 35, 0.8);
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.5);
+            margin-bottom: 25px;
+        }
+        .progress-fill {
+            height: 100%;
+            background: linear-gradient(90deg, rgba(255, 255, 255, 0.7), white, rgba(255, 255, 255, 0.7));
+            border-radius: 10px;
+            width: 0%;
+            transition: width 0.5s ease-out;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
+        }
+        .status-message {
             text-align: center;
-            font-size: 14px;
+            font-size: 19px;
             margin-top: 20px;
+            opacity: 0.85;
+            letter-spacing: 1.5px;
+            transition: opacity 0.3s;
+        }
+        .file-counter {
+            text-align: center;
+            font-size: 13px;
+            margin-top: 15px;
             opacity: 0.6;
             font-family: 'Courier New', monospace;
         }
-
-        .particles-bg {
+        .particles-layer {
             position: fixed;
             top: 0;
             left: 0;
@@ -184,60 +131,40 @@
             pointer-events: none;
             z-index: 1;
         }
-
-        .particle-dot {
+        .particle {
             position: absolute;
             background: rgba(255, 255, 255, 0.3);
             border-radius: 50%;
         }
-
         @keyframes slideDown {
             from {
                 opacity: 0;
-                transform: translateY(-50px);
+                transform: translateY(-60px);
             }
             to {
                 opacity: 1;
                 transform: translateY(0);
             }
         }
-
         @keyframes logoFloat {
             0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-15px); }
+            50% { transform: translateY(-18px); }
         }
-
-        @keyframes borderRotate {
+        @keyframes spinRotate {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
-
-        @keyframes textShine {
-            0% { background-position: 0% center; }
-            100% { background-position: 200% center; }
-        }
-
-        @keyframes spinLoader {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
         @keyframes bgPulse {
             0%, 100% { opacity: 0.7; }
             50% { opacity: 1; }
         }
-
         @keyframes particleDrift {
             0% {
                 transform: translateY(100vh) translateX(0);
                 opacity: 0;
             }
-            10% {
-                opacity: 0.7;
-            }
-            90% {
-                opacity: 0.7;
-            }
+            10% { opacity: 0.7; }
+            90% { opacity: 0.7; }
             100% {
                 transform: translateY(-10vh) translateX(80px);
                 opacity: 0;
@@ -246,120 +173,102 @@
     </style>
 </head>
 <body>
-    <div class="background-animated"></div>
-    <div class="particles-bg" id="particlesBg"></div>
-
-    <div class="container">
-        <div class="logo-section">
-            <div class="logo-frame">
+    <div class="bg-gradient"></div>
+    <div class="particles-layer" id="particles"></div>
+    <div class="main-container">
+        <div class="logo-box">
+            <div class="logo-border">
                 <img src="https://cdn.discordapp.com/attachments/1373657384798388265/1435633626141425694/logo.png?ex=69134501&is=6911f381&hm=570d5a844ae4b0854b89723cc6ded01edf17e341f16f16c6085a2e6f0a754068&" 
                      alt="Server Logo" 
                      class="server-logo"
                      onerror="this.style.display='none'">
             </div>
         </div>
-
-        <h1 class="welcome-text">ДОБРО ПОЖАЛОВАТЬ</h1>
-        <p class="server-name">Подключение к серверу...</p>
-
-        <div class="loading-spinner"></div>
-
-        <div class="progress-section">
-            <div class="progress-info">
-                <span id="statusLabel">Инициализация</span>
-                <span id="progressPercent">0%</span>
+        <h1 class="title-text">ДОБРО ПОЖАЛОВАТЬ</h1>
+        <p class="subtitle" id="serverName">Загрузка сервера...</p>
+        <div class="spinner-circle"></div>
+        <div class="progress-wrapper">
+            <div class="progress-labels">
+                <span id="statusLabel">Подключение</span>
+                <span id="percentLabel">0%</span>
             </div>
-            <div class="progress-bar-wrapper">
-                <div class="progress-bar" id="progressBar"></div>
+            <div class="progress-container">
+                <div class="progress-fill" id="progressBar"></div>
             </div>
-            <div class="status-text" id="statusMessage">Подготовка к загрузке...</div>
-            <div class="file-info" id="fileInfo">Загрузка файлов: <span id="filesDownloaded">0</span></div>
+            <div class="status-message" id="statusText">Инициализация загрузки...</div>
+            <div class="file-counter" id="fileCounter">Загружено файлов: <span id="fileCount">0</span></div>
         </div>
     </div>
-
     <script>
         function createParticles() {
-            const container = document.getElementById('particlesBg');
-            const count = 25;
+            const container = document.getElementById('particles');
+            const count = 20;
             for (let i = 0; i < count; i++) {
                 const particle = document.createElement('div');
-                particle.className = 'particle-dot';
+                particle.className = 'particle';
                 const size = Math.random() * 4 + 1;
                 particle.style.width = size + 'px';
                 particle.style.height = size + 'px';
                 particle.style.left = Math.random() * 100 + '%';
-                particle.style.animation = 'particleDrift ' + (Math.random() * 10 + 15) + 's linear infinite';
-                particle.style.animationDelay = Math.random() * 15 + 's';
+                particle.style.animation = 'particleDrift ' + (Math.random() * 10 + 12) + 's linear infinite';
+                particle.style.animationDelay = Math.random() * 10 + 's';
                 container.appendChild(particle);
             }
         }
-
         createParticles();
-
         function GameDetails(servername, serverurl, mapname, maxplayers, steamid, gamemode) {
-            document.querySelector('.server-name').textContent = servername || 'Загрузка сервера...';
+            document.getElementById('serverName').textContent = servername || 'Подключение к серверу...';
         }
-
         function SetStatusChanged(status) {
-            document.getElementById('statusMessage').textContent = status;
+            document.getElementById('statusText').textContent = status;
             document.getElementById('statusLabel').textContent = status;
         }
-
         function SetFilesNeeded(needed) {
-            document.getElementById('fileInfo').innerHTML = 'Необходимо загрузить файлов: <span>' + needed + '</span>';
+            document.getElementById('fileCounter').innerHTML = 'Необходимо файлов: <span>' + needed + '</span>';
         }
-
         function SetFilesTotal(total) {
-            document.getElementById('fileInfo').innerHTML = 'Всего файлов: <span>' + total + '</span>';
+            document.getElementById('fileCounter').innerHTML = 'Всего файлов: <span>' + total + '</span>';
         }
-
         function DownloadingFile(fileName) {
-            document.getElementById('statusMessage').textContent = 'Загрузка: ' + fileName;
+            document.getElementById('statusText').textContent = 'Загружается: ' + fileName;
         }
-
-        let filesDownloaded = 0;
+        let downloadedCount = 0;
         function SetFilesDownloaded(downloaded) {
-            filesDownloaded = downloaded;
-            document.getElementById('filesDownloaded').textContent = downloaded;
+            downloadedCount = downloaded;
+            document.getElementById('fileCount').textContent = downloaded;
         }
-
-        let currentProgress = 0;
+        let currentPercent = 0;
         function SetLoadProgress(progress) {
-            currentProgress = progress;
-            const bar = document.getElementById('progressBar');
-            const percent = document.getElementById('progressPercent');
-            bar.style.width = progress + '%';
-            percent.textContent = Math.floor(progress) + '%';
+            currentPercent = progress;
+            document.getElementById('progressBar').style.width = progress + '%';
+            document.getElementById('percentLabel').textContent = Math.floor(progress) + '%';
         }
-
-        const statuses = [
+        const statusMessages = [
             'Подключение к серверу...',
-            'Получение информации о сервере...',
+            'Получение информации...',
             'Загрузка ресурсов...',
             'Синхронизация данных...',
             'Загрузка карты...',
             'Загрузка моделей...',
             'Загрузка материалов...',
-            'Оптимизация производительности...',
-            'Финализация загрузки...',
+            'Оптимизация игры...',
+            'Финализация...',
             'Почти готово...'
         ];
-
-        let statusIndex = 0;
+        let msgIndex = 0;
         setInterval(() => {
-            if (currentProgress < 100) {
-                SetStatusChanged(statuses[statusIndex % statuses.length]);
-                statusIndex++;
+            if (currentPercent < 100) {
+                SetStatusChanged(statusMessages[msgIndex % statusMessages.length]);
+                msgIndex++;
             }
-        }, 2000);
-
-        let simulatedProgress = 0;
-        setInterval(() => {
-            if (simulatedProgress < 95) {
-                simulatedProgress += Math.random() * 2;
-                SetLoadProgress(simulatedProgress);
+        }, 2500);
+        let autoProgress = 0;
+        const progressInterval = setInterval(() => {
+            if (autoProgress < 90 && currentPercent === 0) {
+                autoProgress += Math.random() * 1.5;
+                SetLoadProgress(autoProgress);
             }
-        }, 300);
+        }, 400);
     </script>
 </body>
 </html>
