--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
     <!-- Центральная панель -->
     <div class="center-panel">
-        <div class="server-name">НАЗВАНИЕ ВАШЕГО СЕРВЕРА</div>
+        <div class="server-name">Lost Underground - Потерянные под землёй</div>
         
         <div class="loading-circles">
             <div class="circle" id="circle1"></div>
@@ -284,3 +284,4 @@
     </script>
 </body>
 </html>
+
